fix purgeFolder